Bug 1266833 - When the scroll position is clamped during a frame reconstruction, send a scroll offset update to APZ. r=tnikkel

MozReview-Commit-ID: 2UBM4AWWIVI